# Agentic-AI-and-Music-recommender-LLM-MAS-

./: README.md
Music_agents/: pyproject.toml  report(ita).md  slide_ita.pptx
Music_agents/configs/: ablation.yaml  base.yaml
Music_agents/runs/demo-20250827-165201/: messages.jsonl
Music_agents/runs/demo-20250911-151127/: messages.jsonl
Music_agents/runs/demo-20250911-163711/: messages.jsonl
Music_agents/src/: agent.py  bus.py  config.py  data_types.py  env.py  logger.py  make_figures.py  metrics.py  metrics_advanced.py  petri.py  policy.py  policy_phi.py  profile_gen.py  protocol.py  quick_eval.py  security.py  simulate.py
Music_agents/src/data_loaders/: spotify.py
Music_agents/src/music_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Music_agents/tests/: test_protocol.py
